--- a/src/Roadkill.Web/Themes/Modulo/Theme.cshtml
+++ b/src/Roadkill.Web/Themes/Modulo/Theme.cshtml
@@ -3,41 +3,78 @@
 <html>
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>@ViewBag.Title</title>
-	@Html.Partial("HeadContent")
-	@RenderSection("PluginHead", false)
+    <title>@ViewBag.Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    @Html.Partial("HeadContent")
+    @RenderSection("PluginHead", false)
 </head>
 <body>
-	@using (Html.BeginForm("Search", "Home", FormMethod.Get))
-	{
-		<div id="header">
-			<div id="loggedinas" class="left">
-				@Html.Action("LoggedInAs", "User")
-			</div>
-			<div class="right">
-					@Html.Action("NavMenu", "Home")
-				<div id="searchbox" class="left">
-					<input type="text" name="q" placeholder="@SiteStrings.Search_PlaceHolder" class="form-control" />
-				</div>
-			</div>
-		</div>
-	}
+    @RenderSection("PageToolbar", false)
 
-	<div id="page-content">
-		@RenderSection("PageToolbar", false)
-		@RenderSection("PluginPreContainer", false)
+    @*Header*@
+    @using (Html.BeginForm("Search", "Home", FormMethod.Get))
+    {
+        <div id="header-wrapper">
+            <div class="container">
+                <div id="bootstrap-nav-menu">
+                    @Html.Action("BootstrapNavMenu", "Home")
+                </div>
+                <div id="search" class="searchbar navbar-right hidden-xs hidden-sm">
+                    <input type="text" name="q" placeholder="@SiteStrings.Search_PlaceHolder" class="form-control" />
+                </div>
+                <div id="login-status">
+                    @Html.Action("LoggedInAs", "User")
+                </div>
+            </div>
+        </div>
+    }
 
-		<div id="container">
-			@RenderSection("ViewHistoryLink", false)
-			@RenderBody()
+    @using (Html.BeginForm("Search", "Home", FormMethod.Get))
+            {
+	//Search bar for tablets and below
+        <div class="container hidden-lg hidden-md">
+            <div class="row">
+                <div id="search-mobile" class="searchbar">
+                    <input type="text" name="q" placeholder="@SiteStrings.Search_PlaceHolder" class="form-control" />
+                </div>
+            </div>
+        </div>
+    }
 
-			<div id="footer">
-				@RenderSection("PageDetailsFooter", false)
-			</div>
-		</div>
+    @*Content*@
+    <div id="content-wrapper">
+        @RenderSection("PluginPreContainer", false)
 
-		@RenderSection("PluginPostContainer", false)
-		@RenderSection("PluginFooter", false)
-	</div>
+        <div id="container" class="container">
+            <div id="content">
+                @RenderBody()
+            </div>
+        </div>
+
+        @RenderSection("PluginPostContainer", false)
+    </div>
+
+
+    @*Footer*@
+    <div id="footer-wrapper">
+        <div id="footer-inner">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-11">
+                        <h6 id="powered-by">@SiteStrings.Shared_PoweredBy (@ApplicationSettings.ProductVersion).</h6>
+                        <h6>
+                            @RenderSection("PageDetailsFooter", false)
+                            @RenderSection("ViewHistoryLink", false)
+                        </h6>
+                    </div>
+                    <div id="top-link" class="col-md-1">
+                        <h6><a href="#">Top</a></h6>
+                    </div>
+                </div>
+
+                @RenderSection("PluginFooter", false)
+            </div>
+        </div>
+    </div>
 </body>
 </html>
