--- a/src/Roadkill.Web/Views/User/LoggedInAs.cshtml
+++ b/src/Roadkill.Web/Views/User/LoggedInAs.cshtml
@@ -1,1 +1,1 @@
-﻿<span id="loggedinas">@Html.LoginStatus()@Html.LoginLink("&nbsp;-&nbsp;","")</span>
+﻿<span id="loggedinas">@Html.LoginStatus()@Html.LoginLink("","")</span>
